# yawn

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  index.html  package-lock.json  package.json  rsw.toml  rust-toolchain.toml  vite.config.js  vite.config.ts
.cargo/: config.toml
core/: global.d.ts
core/connection/: mainThread.ts  workerThread.ts
core/ecs/: ecs.ts
core/gl/: index.ts  vertices.ts
core/renderer/: engine.ts  gl.ts  scene.ts
core/shaders/triangle/: frag.glsl  vertex.glsl
examples/: starterScene.ts
level-editor/: Cargo.toml
level-editor/src/: lib.rs
level-editor/src/worker/: mainWorker.js  mod.rs
public/shaders/triangle/: frag.glsl  vertex.glsl
renderer/: Cargo.toml
renderer/src/: app_setup.rs  camera.rs  example.wgsl  gltf.rs  gltf.wgsl  lib.rs  message.rs  traits.rs
renderer/src/platform/web/: mod.rs
renderer/src/platform/web/worker/: mainWorker.js  mod.rs
renderer/src/renderer/: mod.rs  scene.rs
src/: camera.rs  gltf.rs  gltf.wgsl  lib.rs  main.ts  message.rs  style.css
src/platform/: mod.rs
src/platform/web/worker/: mainWorker.js  mod.rs
src/renderer/: mod.rs  scene.rs
static/: index.html  index.js  sponza.glb  themanor.glb
