[workspace]
members = ["renderer", "level-editor"]
resolver = "2"

[workspace.dependencies]
wasm-bindgen = { version = "0.2.100", features = ["enable-interning"] }
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.27"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "File",
    "FileList",
    "OffscreenCanvas",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "Worker",
    "DedicatedWorkerGlobalScope",
    "Event",
    "MessageEvent",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "AddEventListenerOptions"
]}
js-sys = "0.3.77"
bytemuck = { version = "1.23.1", features = ["derive"] }
cgmath = "0.18"
raw-window-handle = "0.6.2"
wgpu = "26.0.1"
reqwest = { version = "0.12.23", features = ["json"] }
thiserror = "2.0.15"
ultraviolet = "0.10.0"
futures = "0.3"
gltf = { version = "1.4", features = ["extras", "names", "KHR_lights_punctual"] }
